Rework: Fixes and improvements

--- a/lang/en.json
+++ b/lang/en.json
@@ -33,6 +33,8 @@
 
     "name": "Name",
 
+    "activeConversation": "Active Conversation",
+
     "noLinkedDocuments": "No linked documents",
     "noActiveConversation": "No active conversation",
 
@@ -115,7 +117,9 @@
       "hint": "A linked conversation that will be used whenever the token is being pulled into an active conversation."
     },
 
-    "chooseType": "Choose Type"
+    "chooseType": "Choose Type",
+
+    "featureLocked": "Feature locked by GM"
   },
 
   "CHUD.dialogue": {
