--- a/lang/fr.json
+++ b/lang/fr.json
@@ -58,6 +58,8 @@
 
     "currentParticipants": "Participants Actuels",
     "noActiveParticipant": "Aucun participant actif",
+    "noParticipants": "Aucun participant",
+    "participantsHidden": "La liste des participants est masquée",
     "noParticipantsInList": "La conversation n'a pas de participants. Essayez d'en ajouter. (Glisser-déposer est pris en charge)",
 
     "conversationEntry": "Entrée de Conversation",
